Ru vote data updated & re-cleaned

--- a/ru_vote_2020/data_cleaner.ipynb
+++ b/ru_vote_2020/data_cleaner.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -73,12 +73,12 @@
        "      <td>Республика Адыгея (Адыгея)</td>\n",
        "      <td>1 Адыгейская</td>\n",
        "      <td>УИК №1</td>\n",
-       "      <td>2277.0</td>\n",
-       "      <td>1925.0</td>\n",
-       "      <td>1925.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1749.0</td>\n",
-       "      <td>176.0</td>\n",
+       "      <td>2277</td>\n",
+       "      <td>1925</td>\n",
+       "      <td>1925</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1749</td>\n",
+       "      <td>176</td>\n",
        "      <td>http://www.vybory.izbirkom.ru/region/izbirkom?...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -87,12 +87,12 @@
        "      <td>Республика Адыгея (Адыгея)</td>\n",
        "      <td>1 Адыгейская</td>\n",
        "      <td>УИК №2</td>\n",
-       "      <td>2694.0</td>\n",
-       "      <td>2290.0</td>\n",
-       "      <td>2290.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>2117.0</td>\n",
-       "      <td>166.0</td>\n",
+       "      <td>2694</td>\n",
+       "      <td>2290</td>\n",
+       "      <td>2290</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2117</td>\n",
+       "      <td>166</td>\n",
        "      <td>http://www.vybory.izbirkom.ru/region/izbirkom?...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -101,12 +101,12 @@
        "      <td>Республика Адыгея (Адыгея)</td>\n",
        "      <td>1 Адыгейская</td>\n",
        "      <td>УИК №3</td>\n",
-       "      <td>2865.0</td>\n",
-       "      <td>2441.0</td>\n",
-       "      <td>2441.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2171.0</td>\n",
-       "      <td>259.0</td>\n",
+       "      <td>2865</td>\n",
+       "      <td>2441</td>\n",
+       "      <td>2441</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2171</td>\n",
+       "      <td>259</td>\n",
        "      <td>http://www.vybory.izbirkom.ru/region/izbirkom?...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -115,12 +115,12 @@
        "      <td>Республика Адыгея (Адыгея)</td>\n",
        "      <td>1 Адыгейская</td>\n",
        "      <td>УИК №4</td>\n",
-       "      <td>2054.0</td>\n",
-       "      <td>1669.0</td>\n",
-       "      <td>1669.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1381.0</td>\n",
-       "      <td>280.0</td>\n",
+       "      <td>2054</td>\n",
+       "      <td>1669</td>\n",
+       "      <td>1669</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1381</td>\n",
+       "      <td>280</td>\n",
        "      <td>http://www.vybory.izbirkom.ru/region/izbirkom?...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -129,12 +129,12 @@
        "      <td>Республика Адыгея (Адыгея)</td>\n",
        "      <td>1 Адыгейская</td>\n",
        "      <td>УИК №5</td>\n",
-       "      <td>714.0</td>\n",
-       "      <td>607.0</td>\n",
-       "      <td>607.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>473.0</td>\n",
-       "      <td>133.0</td>\n",
+       "      <td>714</td>\n",
+       "      <td>607</td>\n",
+       "      <td>607</td>\n",
+       "      <td>1</td>\n",
+       "      <td>473</td>\n",
+       "      <td>133</td>\n",
        "      <td>http://www.vybory.izbirkom.ru/region/izbirkom?...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -157,32 +157,32 @@
        "4  Республика Адыгея (Адыгея)  1 Адыгейская  УИК №5   \n",
        "\n",
        "   Число участников голосования, включенных в список участников голосования на момент окончания голосования  \\\n",
-       "0                                             2277.0                                                          \n",
-       "1                                             2694.0                                                          \n",
-       "2                                             2865.0                                                          \n",
-       "3                                             2054.0                                                          \n",
-       "4                                              714.0                                                          \n",
+       "0                                               2277                                                          \n",
+       "1                                               2694                                                          \n",
+       "2                                               2865                                                          \n",
+       "3                                               2054                                                          \n",
+       "4                                                714                                                          \n",
        "\n",
        "   Число бюллетеней, выданных участникам голосования  \\\n",
-       "0                                             1925.0   \n",
-       "1                                             2290.0   \n",
-       "2                                             2441.0   \n",
-       "3                                             1669.0   \n",
-       "4                                              607.0   \n",
+       "0                                               1925   \n",
+       "1                                               2290   \n",
+       "2                                               2441   \n",
+       "3                                               1669   \n",
+       "4                                                607   \n",
        "\n",
        "   Число бюллетеней, содержащихся в ящиках для голосования  \\\n",
-       "0                                             1925.0         \n",
-       "1                                             2290.0         \n",
-       "2                                             2441.0         \n",
-       "3                                             1669.0         \n",
-       "4                                              607.0         \n",
+       "0                                               1925         \n",
+       "1                                               2290         \n",
+       "2                                               2441         \n",
+       "3                                               1669         \n",
+       "4                                                607         \n",
        "\n",
-       "   Число недействительных бюллетеней      ДА    НЕТ  \\\n",
-       "0                                0.0  1749.0  176.0   \n",
-       "1                                7.0  2117.0  166.0   \n",
-       "2                               11.0  2171.0  259.0   \n",
-       "3                                8.0  1381.0  280.0   \n",
-       "4                                1.0   473.0  133.0   \n",
+       "   Число недействительных бюллетеней    ДА  НЕТ  \\\n",
+       "0                                  0  1749  176   \n",
+       "1                                  7  2117  166   \n",
+       "2                                 11  2171  259   \n",
+       "3                                  8  1381  280   \n",
+       "4                                  1   473  133   \n",
        "\n",
        "                                                 url  \n",
        "0  http://www.vybory.izbirkom.ru/region/izbirkom?...  \n",
@@ -192,7 +192,7 @@
        "4  http://www.vybory.izbirkom.ru/region/izbirkom?...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,30 +203,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nans in nominal (to remove): 273\n",
+      "Nans in nominal (to remove): 0\n",
       "['Адыгея' 'Алтай' 'Алтайский' 'Амурская' 'Архангельская' 'Астраханская'\n",
       " 'Башкортостан' 'Белгородская' 'Брянская' 'Бурятия' 'Владимирская'\n",
-      " 'Волгоградская' 'Вологодская' 'Воронежская' 'Дагестан' 'Еврейская'\n",
-      " 'Забайкальский' 'Ивановская' 'Ингушетия' 'Иркутская'\n",
-      " 'Кабардино-Балкарская' 'Калининградская' 'Калмыкия' 'Калужская'\n",
-      " 'Камчатский' 'Карачаево-Черкесская' 'Карелия' 'Кемеровская' 'Кировская'\n",
-      " 'Коми' 'Костромская' 'Краснодарский' 'Красноярский' 'Крым' 'Курганская'\n",
-      " 'Курская' 'Ленинградская' 'Липецкая' 'Магаданская' 'Марий Эл' 'Мордовия'\n",
-      " 'Москва' 'Московская' 'Мурманская' 'Ненецкий' 'Нижегородская'\n",
-      " 'Новгородская' 'Новосибирская' 'Омская' 'Оренбургская' 'Орловская'\n",
-      " 'Пензенская' 'Пермский' 'Приморский' 'Псковская' 'Ростовская' 'Рязанская'\n",
-      " 'Самарская' 'Санкт-Петербург' 'Саратовская' 'Саха' 'Сахалинская'\n",
-      " 'Свердловская' 'Севастополь' 'Смоленская' 'Ставропольский' 'Тамбовская'\n",
-      " 'Татарстан' 'Тверская' 'Томская' 'Тульская' 'Тыва' 'Тюменская'\n",
+      " 'Волгоградская' 'Вологодская' 'Воронежская' 'Город Байконур (Казахстан)'\n",
+      " 'Дагестан' 'Еврейская' 'Забайкальский' 'Ивановская' 'Ингушетия'\n",
+      " 'Иркутская' 'Кабардино-Балкарская' 'Калининградская' 'Калмыкия'\n",
+      " 'Калужская' 'Камчатский' 'Карачаево-Черкесская' 'Карелия' 'Кемеровская'\n",
+      " 'Кировская' 'Коми' 'Костромская' 'Краснодарский' 'Красноярский' 'Крым'\n",
+      " 'Курганская' 'Курская' 'Ленинградская' 'Липецкая' 'Магаданская'\n",
+      " 'Марий Эл' 'Мордовия' 'Москва' 'Московская' 'Мурманская' 'Ненецкий'\n",
+      " 'Нижегородская' 'Новгородская' 'Новосибирская' 'Омская' 'Оренбургская'\n",
+      " 'Орловская' 'Пензенская' 'Пермский' 'Приморский' 'Псковская' 'Ростовская'\n",
+      " 'Рязанская' 'Самарская' 'Санкт-Петербург' 'Саратовская' 'Саха'\n",
+      " 'Сахалинская' 'Свердловская' 'Севастополь' 'Северная Осетия - Алания'\n",
+      " 'Смоленская' 'Ставропольский' 'Тамбовская' 'Татарстан' 'Тверская'\n",
+      " 'Территория за пределами РФ' 'Томская' 'Тульская' 'Тыва' 'Тюменская'\n",
       " 'Удмуртская' 'Ульяновская' 'Хабаровский' 'Хакасия' 'Ханты-Мансийский'\n",
-      " 'Челябинская' 'Чеченская' 'Чукотский' 'Ямало-Ненецкий' 'Ярославская']\n"
+      " 'Челябинская' 'Чеченская' 'Чувашская - Чувашия' 'Чукотский'\n",
+      " 'Ямало-Ненецкий' 'Ярославская']\n"
      ]
     },
     {
@@ -335,7 +337,7 @@
        "4  Адыгея  1 Адыгейская    5      714    607       607        1   473  133"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +375,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Tsyuts'kin12\""
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def latinize(s):\n",
+    "    \"\"\"Latinsca\"\"\"\n",
+    "    a1 = 'абвгдежзиклмнопрстуфхцчшщэюяьъый'\n",
+    "    a2 = \"a b v g d e zh z i k l m n o p r s t u f h ts ch sh sch e yu ya ' ' y y\"\n",
+    "    a1 = a1 + a1.upper()\n",
+    "    a2 = a2.split(' ')\n",
+    "    a2 = a2 + [s.capitalize() for s in a2]\n",
+    "    t = {a1[i]: a2[i] for i in range(len(a1))}\n",
+    "    return ''.join([t[c] if c in t else c for c in s])\n",
+    "    \n",
+    "latinize('Цюцькин12')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>region</th>\n",
+       "      <th>tik</th>\n",
+       "      <th>uik</th>\n",
+       "      <th>nominal</th>\n",
+       "      <th>given</th>\n",
+       "      <th>received</th>\n",
+       "      <th>damaged</th>\n",
+       "      <th>yes</th>\n",
+       "      <th>no</th>\n",
+       "      <th>region_en</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Адыгея</td>\n",
+       "      <td>1 Адыгейская</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2277</td>\n",
+       "      <td>1925</td>\n",
+       "      <td>1925</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1749</td>\n",
+       "      <td>176</td>\n",
+       "      <td>Adygeya</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Адыгея</td>\n",
+       "      <td>1 Адыгейская</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2694</td>\n",
+       "      <td>2290</td>\n",
+       "      <td>2290</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2117</td>\n",
+       "      <td>166</td>\n",
+       "      <td>Adygeya</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Адыгея</td>\n",
+       "      <td>1 Адыгейская</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2865</td>\n",
+       "      <td>2441</td>\n",
+       "      <td>2441</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2171</td>\n",
+       "      <td>259</td>\n",
+       "      <td>Adygeya</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Адыгея</td>\n",
+       "      <td>1 Адыгейская</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2054</td>\n",
+       "      <td>1669</td>\n",
+       "      <td>1669</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1381</td>\n",
+       "      <td>280</td>\n",
+       "      <td>Adygeya</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Адыгея</td>\n",
+       "      <td>1 Адыгейская</td>\n",
+       "      <td>5</td>\n",
+       "      <td>714</td>\n",
+       "      <td>607</td>\n",
+       "      <td>607</td>\n",
+       "      <td>1</td>\n",
+       "      <td>473</td>\n",
+       "      <td>133</td>\n",
+       "      <td>Adygeya</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   region           tik  uik  nominal  given  received  damaged   yes   no  \\\n",
+       "0  Адыгея  1 Адыгейская    1     2277   1925      1925        0  1749  176   \n",
+       "1  Адыгея  1 Адыгейская    2     2694   2290      2290        7  2117  166   \n",
+       "2  Адыгея  1 Адыгейская    3     2865   2441      2441       11  2171  259   \n",
+       "3  Адыгея  1 Адыгейская    4     2054   1669      1669        8  1381  280   \n",
+       "4  Адыгея  1 Адыгейская    5      714    607       607        1   473  133   \n",
+       "\n",
+       "  region_en  \n",
+       "0   Adygeya  \n",
+       "1   Adygeya  \n",
+       "2   Adygeya  \n",
+       "3   Adygeya  \n",
+       "4   Adygeya  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['region_en'] = [latinize(s) for s in df.region.values]\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
