--- a/sklearn_experiments/plot_flying_pies.ipynb
+++ b/sklearn_experiments/plot_flying_pies.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Strange plots"
+    "# Strange plots: Flying Pies"
    ]
   },
   {
