tf variables, gradient tape

--- a/learning_python/Gotchas.ipynb
+++ b/learning_python/Gotchas.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,11 +29,17 @@
     "    a.remove(i)\n",
     "print(a)\n",
     "\n",
+    "\"\"\"[2] remains. Why? It takes #0th element (1), deletes it,\n",
+    "sees that len(a)==2, so takes #1th element (3 at this point), deletes it,\n",
+    "then leaves the loop as #2 element doesn't exist.\"\"\"\n",
+    "\n",
     "# However\n",
     "a = [1,2,3]\n",
     "for i in set(a):\n",
     "    a.remove(i)\n",
     "print(a)\n",
+    "\n",
+    "\"\"\"Deletes everything, as set(a) creates a copy, and we iterate through it.\"\"\"\n",
     "\n",
     "a = {1:[1,2,3]}\n",
     "for i in a[1]:\n",
@@ -44,6 +50,39 @@
     "for i in a.get(1): # No difference. Which means that get doesn't create a copy.\n",
     "    a[1].remove(i)\n",
     "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2]\n",
+      "[2 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.array([1,2])\n",
+    "b = a\n",
+    "a = a*2\n",
+    "print(b)\n",
+    "\"\"\"a*2 creates a new object, so the reference in a gets overwritten, \n",
+    "while b still references the original array.\"\"\"\n",
+    "\n",
+    "a = np.array([1,2])\n",
+    "b = a\n",
+    "for i in range(len(a)):\n",
+    "    a[i] = a[i]*2\n",
+    "print(b)\n",
+    "\"\"\"In this case a is modified in-place, so both a and b still reference\n",
+    "the same part of memory. Meaning that b is also 'updated'\"\"\";"
    ]
   }
  ],
