--- a/tf_experiments/03_keras_custom_training_loop.ipynb
+++ b/tf_experiments/03_keras_custom_training_loop.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "Refs:\n",
     "* https://keras.io/api/models/model/\n",
-    "* https://twitter.com/fchollet/status/1280733141980680193"
+    "* https://twitter.com/fchollet/status/1280733141980680193\n",
+    "\n",
+    "### Not working because of some dimension incompatibility between their example and mine, and I'm parking it for now"
    ]
   },
   {
