tensorisim - another failed brushing

--- a/tf_experiments/02_keras_tuner.ipynb
+++ b/tf_experiments/02_keras_tuner.ipynb
@@ -94,8 +94,8 @@
     "    \n",
     "    model = tf.keras.Sequential([\n",
     "        tf.keras.layers.Input(shape=(1,)), # https://www.tensorflow.org/api_docs/python/tf/keras/Input\n",
-    "        tf.keras.layers.Dense(n_units1),\n",
-    "        tf.keras.layers.LeakyReLU(),\n",
+    "        tf.keras.layers.Dense(n_units1),   # See how parameters take values from this hp.Int() object,\n",
+    "        tf.keras.layers.LeakyReLU(),       # ... instead of normal numbers, as one woudl expect.\n",
     "        tf.keras.layers.Dense(n_units2),\n",
     "        tf.keras.layers.LeakyReLU(),\n",
     "        tf.keras.layers.Dense(1, activation='linear')\n",
@@ -136,7 +136,7 @@
    "source": [
     "Some notes on the init above:\n",
     "\n",
-    "* A local dir for `directory` didn't work for me; I suspect that's because the hirerachy of folders + a longish file name became too long for the system to handle it. Switching to a more \"root\" directory fixed the issue.\n",
+    "* A local dir for `directory` didn't work for me; I suspect that's because my hirerachy of folders, followed by a longish aut-generated file name, became too long for the system to handle it. Switching to a more \"root\" directory fixed the issue.\n",
     "* If the optimizer finished running, you cannot run it again with the same `project_name`, and a new set of parameters in the model declaration. It seems that it tries to read the checkpoints, and fails. Either change the `project_name`, or delete the folder to start anew."
    ]
   },
@@ -146,8 +146,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# A technical override that clears outputs, and is recommended by the ktuner tutorial\n",
-    "# (Not required tho. And doesn't work for me amyways)\n",
+    "# A technical override that clears notebook outputs, and is recommended by the ktuner tutorial,\n",
+    "# just to make it look neater.\n",
+    "# Not required tho. And doesn't work for me amyways.\n",
     "\n",
     "class ClearTrainingOutput(tf.keras.callbacks.Callback):\n",
     "    def on_train_end(*args, **kwargs):\n",
