graph projects get a folder

--- a/graphs_and_networks/college_graph.ipynb
+++ b/graphs_and_networks/college_graph.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Graph courses builder"
+    "# Students-courses graph\n",
+    "\n",
+    "From a small anonymous liberal arts college, actual enrollment for the Fall 2020 semester."
    ]
   },
   {
@@ -100,6 +102,27 @@
    "source": [
     "plt.figure(figsize=(8,8))\n",
     "nx.draw_kamada_kawai(G, node_size=50, alpha=0.5, node_color=node_color)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Output graph for future analysis\n",
+    "\n",
+    "node_names = list(G.nodes)\n",
+    "node_nums = {node_names[i]:i for i in range(len(node_names))}\n",
+    "out_types = [node_type[name] for name in node_names]\n",
+    "edges = [tuple(node_nums[name] for name in edge) for edge in G.edges]\n",
+    "\n",
+    "f = open(\"college_graph.txt\", \"w\")\n",
+    "f.write('Edges:\\n')\n",
+    "f.write(str(edges))\n",
+    "f.write('\\n\\nTypes (0 for course, 1 for student):\\n')\n",
+    "f.write(str(out_types))\n",
+    "f.close()"
    ]
   },
   {
