classical algos revisited

--- a/classic/binary_numbers.ipynb
+++ b/classic/binary_numbers.ipynb
@@ -9,6 +9,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0],\n",
+       " [0, 0, 1],\n",
+       " [0, 1, 0],\n",
+       " [0, 1, 1],\n",
+       " [1, 0, 0],\n",
+       " [1, 0, 1],\n",
+       " [1, 1, 0],\n",
+       " [1, 1, 1]]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Recursive one-liner\n",
+    "\n",
+    "def binary0(n):\n",
+    "    return [[a]+b for a in [0,1] for b in binary0(n-1)] if n else [[]]\n",
+    "\n",
+    "binary0(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -115,6 +147,8 @@
     }
    ],
    "source": [
+    "# A bad old variety of the top recursive one-liner\n",
+    "\n",
     "def binary3(n):\n",
     "    if n==0: return [[]]\n",
     "    smaller = binary3(n-1)\n",
