--- a/classic/binary_search.ipynb
+++ b/classic/binary_search.ipynb
@@ -68,6 +68,8 @@
     }
    ],
    "source": [
+    "# With recursion\n",
+    "\n",
     "def bsr(nums,token,l=0,r=None):\n",
     "    \"\"\"Binary search, recursive.\"\"\"\n",
     "    if l==r:\n",
@@ -106,6 +108,8 @@
     }
    ],
    "source": [
+    "# With a loop (no recursion)\n",
+    "\n",
     "def bsl(nums, target):\n",
     "    \"\"\"Binary search, loop.\"\"\"\n",
     "    l = 0\n",
@@ -165,7 +169,7 @@
    ],
    "source": [
     "def ls(nums,token):\n",
-    "    \"\"\"Linear search.\"\"\"\n",
+    "    \"\"\"Linear search, for benchmarking purposes.\"\"\"\n",
     "    i = 0\n",
     "    while nums[i]<token:\n",
     "        i += 1\n",
@@ -227,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Observation:** For uniformly distributed search tockens, and unique elements, linear search is better than binary for rows shorter than 12 or so (in case of binary search coded as a loop), and up to rows of about 20 if recursion is used.\n",
+    "**Observation:** For uniformly distributed search tokens, and unique elements, linear search is better than binary for rows shorter than 12 or so (in case of binary search coded as a loop), and up to rows of about 20 if recursion is used.\n",
     "\n",
     "So in practice we should never use recursion, that's for sure, but also linear search may in some cases be preferable."
    ]
