--- a/classic/coin_change.ipynb
+++ b/classic/coin_change.ipynb
@@ -132,7 +132,7 @@
     "    if n<=0:\n",
     "        return []\n",
     "    out = []\n",
-    "    for c in coins:\n",
+    "    for c in coins: # Try all options\n",
     "        if c==n:\n",
     "            return [c]\n",
     "        if c<n:\n",
@@ -141,9 +141,9 @@
     "            else:\n",
     "                part = solve(n-c)\n",
     "                mem[n-c] = part\n",
-    "            out.append((len(part)+1,[c]+part)) # A trick here: tuples are sortable, so store the worth of each combo!\n",
+    "            out.append((len(part)+1,[c]+part)) # A trick here: tuples are sortable, so store the length of each combo!\n",
     "    #print(out)\n",
-    "    return sorted(out)[0][1]\n",
+    "    return sorted(out)[0][1] # Return the combo ([1]) that is the shortest ([0] after sorting)\n",
     "\n",
     "for i in range(100):\n",
     "    print(i,solve(i))"
