--- a/classic/generate_all_trees.ipynb
+++ b/classic/generate_all_trees.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Generate all trees\n",
     "\n",
-    "Of either a given height, or with a given numbrer of elements."
+    "Of either a given height, or with a given numbrer of elements.\n",
+    "\n",
+    "We will represent binary trees as strings (or rather, arrays) that is padded with a 0, and for all elements after it, for an element $i$, its kids are stored in positions $2i$ and $2i+1$."
    ]
   },
   {
@@ -21,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -35,12 +37,13 @@
    "source": [
     "# Toolbox\n",
     "def to_bin(x, n_pos=None):\n",
+    "    \"\"\"Integer to a binary array of a given length.\"\"\"\n",
     "    out = []\n",
     "    k = x\n",
     "    while k>0:\n",
     "        out = [(k % 2)] + out\n",
     "        k //= 2\n",
-    "    if n_pos is not None:\n",
+    "    if n_pos: # Padding with zeros\n",
     "        out = [0]*(n_pos-len(out)) + out\n",
     "    return out\n",
     "\n",
@@ -67,6 +70,7 @@
     "# All binary trees of a given height\n",
     "\n",
     "def rarify(nums):\n",
+    "    \"\"\"Remove kid nodes that aren't attached to a parent.\"\"\"\n",
     "    for i in range(len(nums)-1,0,-1):\n",
     "        kids = [i*2, i*2+1]\n",
     "        for kid in kids:\n",
@@ -75,6 +79,7 @@
     "    return nums\n",
     "\n",
     "def tree_height(nums, pos=None):\n",
+    "    \"\"\"Recursively calculate tree height.\"\"\"\n",
     "    if pos is None: return tree_height(nums, 1)\n",
     "    if pos>=len(nums): return 0\n",
     "    if nums[pos]==0: return 0\n",
@@ -214,7 +219,9 @@
     "    mem = {}\n",
     "    \n",
     "    def mix(x,y):\n",
-    "        \"\"\"Shuffles two tree-coding arrays together\"\"\"\n",
+    "        \"\"\"Splices two tree-coding arrays together.\n",
+    "        On tree-rows, it looks like shuffling. Doesn't add a root tho.\n",
+    "        So it's like: [root1 root2 left1 right1 left2 right2 etc.]\"\"\"\n",
     "        n = int(np.log(len(x)+1)/np.log(2))\n",
     "        out = []\n",
     "        j = 0\n",
@@ -226,16 +233,16 @@
     "        return out    \n",
     "    \n",
     "    def bst(l, n, mem):\n",
-    "        \"\"\"Recursive helper function, placing n nodes in l levels\"\"\"\n",
+    "        \"\"\"Recursive helper function: all trees of n nodes with l levels.\"\"\"\n",
     "        if (l,n) in mem: return mem[(l,n)]\n",
-    "        if n==0:         out = [[0]*(2**l-1)]\n",
-    "        elif n==1:       out = [[1]+[0]*(2**l-2)]\n",
+    "        if n==0:         out = [[0]*(2**l-1)]       # No nodes - just return zeros\n",
+    "        elif n==1:       out = [[1]+[0]*(2**l-2)]   # One node - just return the root\n",
     "        else:\n",
     "            out = []\n",
     "            for k in range(n): # To range(n) if you want both wings, to (n-1) for one side only\n",
     "                # print('k:', n, k, n-1-k)\n",
-    "                set1 = bst(l-1, n-1-k, mem)\n",
-    "                set2 = bst(l-1, k, mem)\n",
+    "                set1 = bst(l-1, n-1-k, mem) # Consider all possible left trees\n",
+    "                set2 = bst(l-1, k, mem)     # .. and all possible right trees\n",
     "                for x in set1:\n",
     "                    for y in set2:\n",
     "                        out += [[1] + mix(x,y)]\n",
@@ -256,7 +263,7 @@
     "\n",
     "What I do below is to look at height of all leaves in a tree, which is a strictly stronger condition. For small trees (n=4 or 5) it works well, but for larger trees it prunes things that shouldn't be pruned. For example a tree with 4 leaves height 4,3,2,2 is not rotationally isomorphic to a tree that has same branches cut and reattached as 4,2,3,2. But my program below will claim that they are isomorphic. Even though no rotation can turn one into the other (4322=2243==2234, but not 2324).\n",
     "\n",
-    "Presumably, this approach below can be fixed if we replace `sorted()` in the `invariant()` function with some special sort that only swaps branches tha can be swapped... But for this to work we need to remember more information... So it's tricky. I'm not sure how to solve it."
+    "Presumably, this approach below can be fixed if we replace `sorted()` in the `invariant()` function with some special sort that only swaps branches that can be swapped... But for this to work we need to remember more information... So it's tricky. I'm not sure how to solve it."
    ]
   },
   {
