--- a/classic/hash_tables.ipynb
+++ b/classic/hash_tables.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -131,6 +131,8 @@
     "    \n",
     "    def rm(self,key):\n",
     "        h = self.hf(key)\n",
+    "        if self.array[h] is None:\n",
+    "            raise KeyError('Invalid key')\n",
     "        self.array[h] = self.array[h].rm(key)\n",
     "    \n",
     "    def print(self):\n",
@@ -176,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -218,14 +220,14 @@
     "        j = 0\n",
     "        while j < self.m:\n",
     "            k = (i+j) % self.m\n",
-    "            if self.a[k] in [None,'del']:\n",
+    "            if self.a[k] in [None,'del']: # None for pristine, del for deleted (special magic value)\n",
     "                self.a[k] = (key,val)\n",
     "                return\n",
     "            if self.a[k][0]==key: # At this point we know it's not None\n",
     "                self.a[k] = (key,val)\n",
     "                return\n",
     "            j += 1\n",
-    "        raise MemoryError('Hashmap overflow.')\n",
+    "        raise MemoryError('Hashmap overflow.')      # We're not looping to the beginning, but we could\n",
     "        \n",
     "    def find(self,key):\n",
     "        i = self.hf(key)\n",
@@ -234,12 +236,13 @@
     "            k = (i+j) % self.m\n",
     "            if self.a[k] is None:\n",
     "                return None\n",
-    "            if self.a[k]=='del':\n",
+    "            if self.a[k]=='del': # We should continue on dels, as if they were normal values\n",
     "                j += 1\n",
     "                continue\n",
     "            if self.a[k][0]==key:\n",
     "                return k\n",
-    "            j += 1\n",
+    "            j += 1 # Strictly speaking 'del' above can be tucked into this case (no need for a separate 'if')\n",
+    "        return None\n",
     "    \n",
     "    def get(self,key):\n",
     "        k = self.find(key)\n",
@@ -248,7 +251,7 @@
     "    \n",
     "    def rm(self,key):\n",
     "        k = self.find(key)\n",
-    "        if k is None: return\n",
+    "        if k is None: raise KeyError('Invalid key')\n",
     "        self.a[k] = 'del'\n",
     "    \n",
     "ht = Htlp(m=7)\n",
@@ -305,7 +308,7 @@
    ],
    "source": [
     "def divisors(k):\n",
-    "    \"\"\"A tool to find prime numbers.\"\"\"\n",
+    "    \"\"\"A quick silly tool to find prime numbers.\"\"\"\n",
     "    return [i for i in range(2,k-1) if k % i==0]\n",
     "\n",
     "print(divisors(60))\n",
